--- a/admin.html
+++ b/admin.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Vexinq Admin Paneli</title>
   <style>
-    *{box-sizing:border-box;font-family:'Poppins',sans-serif}
-    body{margin:0;background:#f0f4ff;color:#333;display:flex;flex-direction:column;min-height:100vh}
-    header{background:#007BFF;color:#fff;text-align:center;padding:18px 10px;font-size:24px;font-weight:600;box-shadow:0 4px 8px rgba(0,0,0,.1)}
-    .wrap{flex:1;width:100%;max-width:960px;margin:40px auto;background:#fff;padding:25px 30px;border-radius:10px;box-shadow:0 4px 12px rgba(0,0,0,.07)}
-    h2{color:#007BFF;margin:30px 0 10px;font-size:22px}
-    label{font-weight:600;margin-top:12px;display:block}
-    input,textarea,select{width:100%;padding:10px;margin-top:6px;border:1px solid #ccc;border-radius:6px;font-size:14px}
-    button{cursor:pointer;padding:10px 16px;margin-top:10px;border:none;border-radius:6px;font-weight:600;background:#007BFF;color:#fff;transition:.2s}
-    button:hover{background:#0056b3}
-    .danger{background:#dc3545} .danger:hover{background:#b02a37}
-    .list-item{display:flex;justify-content:space-between;align-items:center;background:#f7f9ff;padding:8px 10px;border:1px solid #e1e6ff;border-radius:6px;margin-top:6px}
-    .list-item span{flex:1}
-    footer{text-align:center;padding:15px;background:#e6f0ff;color:#555;font-size:14px}
-    .hidden{display:none}
-    #loginBox{max-width:400px;margin:100px auto}
-    @media(max-width:600px){.wrap{margin:20px 10px}}
+    * { box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+    body { margin: 0; background: #f0f4ff; color: #333; display: flex; flex-direction: column; min-height: 100vh; }
+    header { background: #007BFF; color: #fff; text-align: center; padding: 18px 10px; font-size: 24px; font-weight: 600; box-shadow: 0 4px 8px rgba(0,0,0,.1); }
+    .wrap { flex: 1; width: 100%; max-width: 960px; margin: 40px auto; background: #fff; padding: 25px 30px; border-radius: 10px; box-shadow: 0 4px 12px rgba(0,0,0,.07); }
+    h2 { color: #007BFF; margin: 30px 0 10px; font-size: 22px; }
+    label { font-weight: 600; margin-top: 12px; display: block; }
+    input, textarea, select { width: 100%; padding: 10px; margin-top: 6px; border: 1px solid #ccc; border-radius: 6px; font-size: 14px; }
+    button { cursor: pointer; padding: 10px 16px; margin-top: 10px; border: none; border-radius: 6px; font-weight: 600; background: #007BFF; color: #fff; transition: .2s; }
+    button:hover { background: #0056b3; }
+    .danger { background: #dc3545; } .danger:hover { background: #b02a37; }
+    .list-item { display: flex; justify-content: space-between; align-items: center; background: #f7f9ff; padding: 8px 10px; border: 1px solid #e1e6ff; border-radius: 6px; margin-top: 6px; }
+    .list-item span { flex: 1; }
+    footer { text-align: center; padding: 15px; background: #e6f0ff; color: #555; font-size: 14px; }
+    .hidden { display: none; }
+    #loginBox { max-width: 400px; margin: 100px auto; }
+    #previewBox { margin-top: 40px; padding: 20px; border: 1px dashed #aaa; border-radius: 10px; background: #f9fcff; }
   </style>
 </head>
 <body>
@@ -50,11 +50,17 @@
 
     <h2>Özellikler</h2>
     <div id="featureContainer"></div>
-    <div style="display:flex;gap:10px;margin-top:8px"><input id="newFeature" placeholder="Özellik ekle..."><button onclick="addFeature()">Ekle</button></div>
+    <div style="display:flex;gap:10px;margin-top:8px">
+      <input id="newFeature" placeholder="Özellik ekle...">
+      <button onclick="addFeature()">Ekle</button>
+    </div>
 
     <h2>Destek Sunucuları</h2>
     <div id="supportContainer"></div>
-    <div style="display:flex;gap:10px;margin-top:8px"><input id="newSupport" placeholder="https://discord.gg/... "><button onclick="addSupport()">Ekle</button></div>
+    <div style="display:flex;gap:10px;margin-top:8px">
+      <input id="newSupport" placeholder="https://discord.gg/...">
+      <button onclick="addSupport()">Ekle</button>
+    </div>
 
     <h2>Tema Rengi</h2>
     <select id="themeColor">
@@ -74,128 +80,182 @@
       <button onclick="addAdmin()">Ekle</button>
     </div>
 
+    <h2>Önizleme</h2>
+    <div id="previewBox">
+      <h3 id="previewLogo"></h3>
+      <h4 id="previewHero"></h4>
+      <p id="previewDesc"></p>
+      <p><strong>Hakkımızda:</strong> <span id="previewAbout"></span></p>
+      <p><strong>Davet Linki:</strong> <a id="previewInvite" href="#" target="_blank"></a></p>
+    </div>
+
     <button onclick="saveAll()" style="margin-top:20px">Kaydet</button>
     <button onclick="logout()" class="danger" style="margin-left:10px">Çıkış Yap</button>
+    <button onclick="generateIndex()" style="margin-top:10px;background:#28a745">index.html oluştur ve indir</button>
   </div>
 
   <footer>Discord: Vexarithul | © 2025 Tüm Hakları Saklıdır</footer>
 
-<script>
-const defaultData = {
-  settings:{logo:"Vexinq",heroTitle:"Vexinq ile Sunucunuzu Güçlendirin",heroDesc:"Her gün yenilenen komutlar ve gelişmiş sistemlerle sunucunuzu bir adım öteye taşıyın.",invite:"https://discord.com/oauth2/authorize?...",about:"Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirilen gelişmiş bir bot sistemidir.",theme:"#007BFF"},
-  features:["🏗️ Otomatik Sunucu Kurulumu","🔨 Gelişmiş Moderasyon Sistemi","🛡️ Güçlü Koruma ve Anti-Raid"],
-  supports:["https://discord.gg/qvZBKEUCQy","https://discord.gg/MKq4UsRNMS"],
-  admins:[{user:"dcvexarithul",pass:"123"},{user:"emre",pass:"123"}]
-};
+  <script>
+    let data = JSON.parse(localStorage.getItem("vexData")) || {
+      settings: {
+        logo: "Vexinq",
+        heroTitle: "Vexinq'e Hoş Geldiniz!",
+        heroDesc: "Sunucunuza güç katacak en iyi bot.",
+        about: "Biz kimiz, ne yaparız? İşte burada anlatıyoruz!",
+        invite: "https://discord.com/oauth2/...",
+        theme: "#007BFF"
+      },
+      features: [],
+      supports: [],
+      admins: [{user: "dcvexarithul", pass: "123"}]
+    };
 
-if(!localStorage.getItem("vexData")){
-  localStorage.setItem("vexData",JSON.stringify(defaultData));
-}
-let data = JSON.parse(localStorage.getItem("vexData"));
+    function login() {
+      const u = document.getElementById("loginUser").value.trim();
+      const p = document.getElementById("loginPass").value.trim();
+      const found = data.admins.find(a => a.user === u && a.pass === p);
+      if (found) showPanel(); else alert("Hatalı giriş ❌");
+    }
 
-function setCookie(name,value,days){
-  const d=new Date();
-  d.setTime(d.getTime()+(days*24*60*60*1000));
-  document.cookie=name+"="+value+";expires="+d.toUTCString()+";path=/";
-}
-function getCookie(name){
-  const n=name+"=";
-  const ca=document.cookie.split(';');
-  for(let i=0;i<ca.length;i++){
-    let c=ca[i];
-    while(c.charAt(0)==' ')c=c.substring(1);
-    if(c.indexOf(n)==0)return c.substring(n.length,c.length);
-  }
-  return "";
-}
-function deleteCookie(name){
-  document.cookie=name+'=; Max-Age=0; path=/';
-}
+    function logout() {
+      document.getElementById("panelBox").classList.add("hidden");
+      document.getElementById("loginBox").classList.remove("hidden");
+    }
 
-function login(){
-  const u=document.getElementById("loginUser").value.trim();
-  const p=document.getElementById("loginPass").value.trim();
-  if(data.admins.find(a=>a.user===u&&a.pass===p)){
-    setCookie("vexLogged","1",7);
-    showPanel();
-  }else alert("Hatalı kullanıcı adı veya şifre!");
-}
-function logout(){ deleteCookie("vexLogged"); location.reload(); }
+    function showPanel() {
+      document.getElementById("loginBox").classList.add("hidden");
+      document.getElementById("panelBox").classList.remove("hidden");
+      document.getElementById("logoName").value = data.settings.logo;
+      document.getElementById("heroTitle").value = data.settings.heroTitle;
+      document.getElementById("heroDesc").value = data.settings.heroDesc;
+      document.getElementById("inviteLink").value = data.settings.invite;
+      document.getElementById("aboutText").value = data.settings.about;
+      document.getElementById("themeColor").value = data.settings.theme;
+      renderFeatures(); renderSupports(); renderAdmins(); updatePreview();
+    }
 
-function showPanel(){
-  document.getElementById("loginBox").classList.add("hidden");
-  document.getElementById("panelBox").classList.remove("hidden");
-  document.getElementById("logoName").value=data.settings.logo;
-  document.getElementById("heroTitle").value=data.settings.heroTitle;
-  document.getElementById("heroDesc").value=data.settings.heroDesc;
-  document.getElementById("inviteLink").value=data.settings.invite;
-  document.getElementById("aboutText").value=data.settings.about;
-  document.getElementById("themeColor").value=data.settings.theme;
-  renderFeatures();renderSupports();renderAdmins();
-}
-function saveAll(){
-  data.settings.logo=document.getElementById("logoName").value.trim();
-  data.settings.heroTitle=document.getElementById("heroTitle").value.trim();
-  data.settings.heroDesc=document.getElementById("heroDesc").value.trim();
-  data.settings.invite=document.getElementById("inviteLink").value.trim();
-  data.settings.about=document.getElementById("aboutText").value.trim();
-  data.settings.theme=document.getElementById("themeColor").value;
-  localStorage.setItem("vexData",JSON.stringify(data));
-  alert("Değişiklikler kaydedildi ✔️");
-}
-function renderFeatures(){
-  const cont=document.getElementById("featureContainer");
-  cont.innerHTML="";
-  data.features.forEach((f,i)=>{
-    cont.innerHTML+=`<div class="list-item"><span>${f}</span><button class="danger" onclick="delFeature(${i})">Sil</button></div>`;
-  });
-}
-function addFeature(){
-  const val=document.getElementById("newFeature").value.trim();
-  if(val){data.features.push(val);document.getElementById("newFeature").value="";renderFeatures();}
-}
-function delFeature(i){data.features.splice(i,1);renderFeatures();}
-function renderSupports(){
-  const cont=document.getElementById("supportContainer");
-  cont.innerHTML="";
-  data.supports.forEach((s,i)=>{
-    cont.innerHTML+=`<div class="list-item"><span>${s}</span><button class="danger" onclick="delSupport(${i})">Sil</button></div>`;
-  });
-}
-function addSupport(){
-  const val=document.getElementById("newSupport").value.trim();
-  if(val.startsWith("http")){
-    data.supports.push(val);
-    document.getElementById("newSupport").value="";
-    renderSupports();
-  }else alert("Geçerli bir link giriniz");
-}
-function delSupport(i){data.supports.splice(i,1);renderSupports();}
-function renderAdmins(){
-  const cont=document.getElementById("adminContainer");
-  cont.innerHTML="";
-  data.admins.forEach((a,i)=>{
-    cont.innerHTML+=`<div class="list-item"><span>👤 ${a.user}</span>${a.user!=='dcvexarithul'?`<button class='danger' onclick='delAdmin(${i})'>Sil</button>`:''}</div>`;
-  });
-}
-function addAdmin(){
-  const u=document.getElementById("newAdminUser").value.trim();
-  const p=document.getElementById("newAdminPass").value.trim();
-  if(!u||!p){alert("Boş alan bırakmayın");return;}
-  if(data.admins.find(a=>a.user===u)){alert("Bu kullanıcı zaten var");return;}
-  data.admins.push({user:u,pass:p});
-  document.getElementById("newAdminUser").value="";
-  document.getElementById("newAdminPass").value="";
-  renderAdmins();
-}
-function delAdmin(i){
-  if(data.admins[i].user==='dcvexarithul'){alert('Super admin silinemez');return;}
-  data.admins.splice(i,1);renderAdmins();
-}
+    function updatePreview() {
+      document.getElementById("previewLogo").innerText = data.settings.logo;
+      document.getElementById("previewHero").innerText = data.settings.heroTitle;
+      document.getElementById("previewDesc").innerText = data.settings.heroDesc;
+      document.getElementById("previewAbout").innerText = data.settings.about;
+      const link = document.getElementById("previewInvite");
+      link.innerText = data.settings.invite;
+      link.href = data.settings.invite;
+    }
 
-window.onload=()=>{
-  if(getCookie("vexLogged")==='1') showPanel();
-}
-</script>
+    function saveAll() {
+      data.settings.logo = document.getElementById("logoName").value.trim();
+      data.settings.heroTitle = document.getElementById("heroTitle").value.trim();
+      data.settings.heroDesc = document.getElementById("heroDesc").value.trim();
+      data.settings.invite = document.getElementById("inviteLink").value.trim();
+      data.settings.about = document.getElementById("aboutText").value.trim();
+      data.settings.theme = document.getElementById("themeColor").value;
+      localStorage.setItem("vexData", JSON.stringify(data));
+      updatePreview();
+      alert("Değişiklikler kaydedildi ✔️");
+    }
+
+    function renderFeatures() {
+      const box = document.getElementById("featureContainer");
+      box.innerHTML = "";
+      data.features.forEach((f, i) => {
+        const div = document.createElement("div");
+        div.className = "list-item";
+        div.innerHTML = `<span>${f}</span><button onclick="removeFeature(${i})">Sil</button>`;
+        box.appendChild(div);
+      });
+    }
+
+    function addFeature() {
+      const val = document.getElementById("newFeature").value.trim();
+      if (val) {
+        data.features.push(val);
+        document.getElementById("newFeature").value = "";
+        renderFeatures();
+      }
+    }
+
+    function removeFeature(i) {
+      data.features.splice(i, 1);
+      renderFeatures();
+    }
+
+    function renderSupports() {
+      const box = document.getElementById("supportContainer");
+      box.innerHTML = "";
+      data.supports.forEach((s, i) => {
+        const div = document.createElement("div");
+        div.className = "list-item";
+        div.innerHTML = `<span>${s}</span><button onclick="removeSupport(${i})">Sil</button>`;
+        box.appendChild(div);
+      });
+    }
+
+    function addSupport() {
+      const val = document.getElementById("newSupport").value.trim();
+      if (val) {
+        data.supports.push(val);
+        document.getElementById("newSupport").value = "";
+        renderSupports();
+      }
+    }
+
+    function removeSupport(i) {
+      data.supports.splice(i, 1);
+      renderSupports();
+    }
+
+    function renderAdmins() {
+      const box = document.getElementById("adminContainer");
+      box.innerHTML = "";
+      data.admins.forEach((a, i) => {
+        const div = document.createElement("div");
+        div.className = "list-item";
+        div.innerHTML = `<span>${a.user}</span><button onclick="removeAdmin(${i})">Sil</button>`;
+        box.appendChild(div);
+      });
+    }
+
+    function addAdmin() {
+      const user = document.getElementById("newAdminUser").value.trim();
+      const pass = document.getElementById("newAdminPass").value.trim();
+      if (user && pass) {
+        data.admins.push({user, pass});
+        document.getElementById("newAdminUser").value = "";
+        document.getElementById("newAdminPass").value = "";
+        renderAdmins();
+      }
+    }
+
+    function removeAdmin(i) {
+      if (confirm("Admin silinsin mi?")) {
+        data.admins.splice(i, 1);
+        renderAdmins();
+      }
+    }
+
+    function generateIndex() {
+      const htmlContent = `
+<!DOCTYPE html>
+<html lang="tr"><head><meta charset="UTF-8"><title>${data.settings.logo}</title>
+<style>body{font-family:Poppins,sans-serif;background:${data.settings.theme};color:#fff;margin:0;padding:40px;text-align:center}
+h1{font-size:3em;margin-bottom:10px}h2{font-weight:normal;margin-bottom:20px}
+p{max-width:600px;margin:0 auto 20px;line-height:1.6}
+a{color:#fff;font-weight:bold;text-decoration:underline}
+</style></head><body>
+<h1>${data.settings.heroTitle}</h1>
+<h2>${data.settings.heroDesc}</h2>
+<p><strong>Hakkımızda:</strong><br>${data.settings.about}</p>
+<p><a href="${data.settings.invite}" target="_blank">Botu Davet Et</a></p>
+</body></html>`;
+      const blob = new Blob([htmlContent], {type: 'text/html'});
+      const link = document.createElement("a");
+      link.href = URL.createObjectURL(blob);
+      link.download = "index.html";
+      link.click();
+    }
+  </script>
 </body>
 </html>
