--- a/index.html
+++ b/index.html
@@ -196,8 +196,19 @@
   </header>
 
   <section class="hero">
-    <h1>Vexinq ile Sunucunuzu Güçlendirin</h1>
-    <p>Her gün yenilenen komutlar ve gelişmiş sistemlerle sunucunuzu bir adım öteye taşıyın.</p>
+    <h1>Vexinq ile Sunucunuza Seviye Atlatın</h1>
+    <p>🤖 Vexinq Bot Hakkında
+Vexinq Bot, 2023 yılında geliştirilmeye başlandı ve kısa sürede Discord topluluklarının vazgeçilmez yardımcılarından biri haline geldi. Kurulduğu günden bu yana, kullanıcı dostu yapısı, modern arayüzleri ve buton tabanlı komut sistemiyle dikkat çekiyor. Komut yazma derdine son! Artık tek bir tıklamayla istediğin işlemi kolayca gerçekleştirebilirsin. 🖱️✨
+
+Vexinq, sıradan bir bot olmanın çok ötesinde. İçerisinde barındırdığı gelişmiş sistemler sayesinde hem kullanıcılar hem de sunucu yöneticileri için etkili, hızlı ve sorunsuz bir deneyim sunar. Geliştirilmiş moderasyon araçları 🔒, detaylı kullanıcı verileri 📊, eğlenceli komutlar 🎮 ve bilgilendirici içerikler 📚 ile her ihtiyacınıza cevap verir. Üstelik tüm sistemleri estetik ve modern tasarımıyla sunar — hem göze hitap eder, hem işlevsellikten ödün vermez. 🎨💡
+
+Botun arayüzünde kullanılan buton sistemi, komut karmaşasını ortadan kaldırır. Ne yapacağınızı düşünmenize gerek kalmadan, sadece ihtiyacınız olan seçeneğe tıklamanız yeterlidir. Bu sayede hem yeni başlayanlar hem de deneyimli kullanıcılar için kolay ve akıcı bir kullanım deneyimi sağlanır. 🧩🔧
+
+Vexinq sürekli güncellenen altyapısı ve geliştirici desteğiyle her geçen gün daha da büyüyor. Kullanıcılarından gelen geri bildirimleri dikkate alarak kendini sürekli geliştiriyor. Bu sayede her zaman güncel, her zaman stabil, ve her zaman bir adım önde olmayı başarıyor. 🚀
+
+Eğer sunucunuza profesyonel, etkili ve etkileşimli bir bot kazandırmak istiyorsanız, Vexinq tam da aradığınız şey olabilir. Gelişmiş özellikleriyle, kullanıcılarınızı memnun ederken yöneticilere de büyük kolaylıklar sağlar.
+
+🎯 Vexinq ile tanışın – butonlara dokunun, farkı hissedin!</p>
     <a class="cta" href="https://discord.com/oauth2/authorize?client_id=1387098050316472341&permissions=8&scope=bot" target="_blank">Botu Davet Et</a>
   </section>
 
