--- a/index.html
+++ b/index.html
@@ -214,7 +214,9 @@ Eğer sunucunuza profesyonel, etkili ve etkileşimli bir bot kazandırmak istiyo
 
   <section id="about" class="section">
     <h2>Hakkımızda</h2>
-    <p>Vexinq, 2023 yılında Discord topluluklarının ihtiyaçlarını karşılamak amacıyla geliştirilen gelişmiş bir bot sistemidir. Kullanıcı odaklı tasarımı, modüler altyapısı ve sürekli güncellenen yapısı ile sunucular için en iyi yardımcıyı sunar.</p>
+    <p>Ben Vexarithul. 2022’den beri yazılım geliştirme ile ilgileniyorum ve bu süreçte hem bireysel hem de ekip projelerinde aktif rol aldım. Kendi başlattığım proje olan Vexinq, kişisel vizyonumu ve teknik becerilerimi yansıttığım bir çalışma alanı. Aynı zamanda ZenixCore ekibinin bir parçası olarak, kolektif üretimin gücüne de inanıyorum.
+
+Kod yazmak benim için bir araç değil, bir ifade biçimi. Basit bir fikirden başlayıp çalışan ve işe yarayan bir sisteme dönüşen her proje, benim için ayrı bir motivasyon kaynağı. Öğrenmeye, gelişmeye ve üretmeye tutkuyla bağlıyım.</p>
   </section>
 
   <section id="features" class="section">
